fixing address bar problem on mobile v4

--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ body {
 		linear-gradient(0deg, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)),
 		url("./bg-img.jpg");
 	background-size: auto cover;
-	background-position: 60% center;
+	background-position: 70% center;
 	background-attachment: fixed;
 	background-repeat: no-repeat;
 	text-align: center;
@@ -101,7 +101,7 @@ span {
 	min-height: 100vh;
 	width: 90vw;
 	position: relative;
-	top: -6rem;
+	/*top: -6rem;*/
 	/*box-shadow: 0 5px 10px #212931;*/
 }
 
@@ -138,12 +138,19 @@ h2 {
 
 @media screen and (max-width: 800px){
 	.container_start {
+		background-color: #212931;
+		background-image: url("../images/overlay.png"), 
+			linear-gradient(0deg, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)),
+			url("./bg-img.jpg");
+		background-size: auto cover;
+		background-position: 60% 30%;
+		background-attachment: scroll;
+		background-repeat: no-repeat;
 		height: 100vh;
 	}
 
 	.container {
-		background-position: 60% top ;
-		background-attachment: scroll;
+		background: none;
 	}
 
 	.pepe {
